--- a/Assets/Converter/Scripts/Converter.asmdef
+++ b/Assets/Converter/Scripts/Converter.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Converter",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:5b8a6228c27a7864d950ce2409b923d3"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
