update, planet popup presenter

--- a/Assets/Game/Scripts/Presenters/Game.Presenters.asmdef
+++ b/Assets/Game/Scripts/Presenters/Game.Presenters.asmdef
@@ -1,12 +1,13 @@
 {
-    "name": "Game.Views",
+    "name": "Presenters",
     "rootNamespace": "",
     "references": [
-        "Unity.TextMeshPro",
-        "UIComponents",
-        "Zenject",
-        "dotweenModules",
-        "Planets"
+        "GUID:3611489d3ec54268a54fa2a046f90083",
+        "GUID:d430bedc2075480fbe691ed151691c6c",
+        "GUID:62a9adcec8f3470dab014061262d08cd",
+        "GUID:87df7d11a064465e9f5772fc6c82502f",
+        "GUID:e39b1cbd8bc143a7a3259afcbc76e4d2",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
