--- a/Assets/Game/Scripts/Views/Game.Views.asmdef
+++ b/Assets/Game/Scripts/Views/Game.Views.asmdef
@@ -5,8 +5,7 @@
         "Unity.TextMeshPro",
         "UIComponents",
         "Zenject",
-        "dotweenModules",
-        "Planets"
+        "dotweenModules"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
